# hachimoku

./: .gitignore  CLAUDE.md  README.ja.md  README.md  pyproject.toml
.claude/: docs.md
.claude/commands/: rp.md  start-issue.md
.claude/plugins/pr-review-toolkit/: README.md
.claude/skills/ccusage-analysis/: SKILL.md
.claude/skills/planning-validate/: SKILL.md
.claude/skills/refactor-scan/: SKILL.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: docs.yml
.specify/memory/: constitution.md
docs/: Makefile  agents.md  cli.md  conf.py  configuration.md  index.md  installation.md  models.md  review-context.md
docs/_examples/: config.toml  security-checker.toml
docs/_redirect/: index.html
docs/en/: agents.md  cli.md  conf.py  configuration.md  index.md  installation.md  models.md  review-context.md
docs/ja/: agents.md  cli.md  conf.py  configuration.md  index.md  installation.md  models.md  review-context.md
docs/superpowers/plans/: 2026-05-18-sp1-2a-model-reshape.md  2026-05-18-sp1-2b1-manifest-applicability.md  2026-05-18-sp1-2b2-select-command.md  2026-05-18-sp1-3-aggregate-command.md  2026-05-18-sp1-engine-removal.md  2026-05-18-sp2-main-build-command.md  2026-05-18-sp2-pre-prompt-rewrite.md  2026-05-19-sp3-claude-code-plugin.md
docs/superpowers/specs/: 2026-05-18-skill-migration-design.md
drafts/: 04-cli-interface.md
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/scripts/: block-git-mutations.sh
plugin/skills/review/: SKILL.md
plugin/skills/setup/: SKILL.md
specs/: README.md
specs/001-architecture-spec/: spec.md
specs/001-architecture-spec/checklists/: requirements.md
specs/002-domain-models/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-domain-models/checklists/: requirements.md
specs/002-domain-models/contracts/: models.py
specs/003-agent-definition/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-agent-definition/checklists/: requirements.md
specs/003-agent-definition/contracts/: agent.py
specs/004-configuration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-configuration/checklists/: requirements.md
specs/004-configuration/contracts/: config_models.py  config_resolver.py  project_locator.py
specs/005-review-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-review-engine/checklists/: requirements.md
specs/005-review-engine/contracts/: agent_runner.py  execution_context.py  executors.py  instruction_builder.py  progress_reporter.py  review_engine.py  (+4 more)
specs/006-cli-interface/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-init-prompt/: plan.md  spec.md
src/hachimoku/: __init__.py
(+149 files in other folders)
