[project]
name = "hachimoku"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "driller", email = "eleshis@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "claudecode-model",
    "typer>=0.21.1",
]

[project.scripts]
hachimoku = "hachimoku:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
docs = [
    "myst-parser>=5.0.0",
    "shibuya>=2026.1.9",
    "sphinx>=9.1.0",
    "sphinxcontrib-mermaid>=2.0.0",
]

[tool.uv.sources]
claudecode-model = { git = "https://github.com/drillan/claudecode-model.git" }
