[project]
name = "hachimoku"
version = "0.0.5"
description = "Multi-agent code review CLI tool"
readme = "README.md"
authors = [
    { name = "driller", email = "eleshis@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "claudecode-model",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.56.0",
    "rich>=14.0.0",
    "typer>=0.21.1",
]

[project.scripts]
"8moku" = "hachimoku.cli:main"
hachimoku = "hachimoku.cli:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
]
docs = [
    "myst-parser>=5.0.0",
    "shibuya>=2026.1.9",
    "sphinx>=9.1.0",
    "sphinxcontrib-mermaid>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:cannot collect test class 'TestGapAssessment':pytest.PytestCollectionWarning",
]

[tool.mypy]
exclude = ["specs/", "docs/"]

[tool.uv.sources]
claudecode-model = { git = "https://github.com/drillan/claudecode-model.git" }
